# tofclean

./: .gitignore  README.md  autoencoder.ipynb  autoencoder.py  eval.py  evaluate.sh  main_fpn.ipynb  main_fpn.py  stdevloss.py  val.txt
dataset/: nyuv2_dataset.py
fileprocessing/: CMakeLists.txt
fileprocessing/bash_files/: addnosie2rgb.sh  augmentation.py  create_dataset_pipeline.sh  create_eval_gt_pipeline.sh  create_mask.sh  create_train.py  depth2pcd.sh  depth3.sh  depthmask2pcd.sh  maskcompare.sh  pcd2depth.sh  pw_compare.sh  rename.py  sor.sh  voxel_filter.sh
fileprocessing/src/: addnoise2rgb.cpp  create_mask.cpp  depth2pcd.cpp  depthmask2pcd.cpp  maskcompare.cpp  pcd2depth.cpp  pw_depthcompare.cpp  pw_pcdcompare.cpp  sor.cpp
